@@ -1,6 +1,5 @@
 package com.project.oditji.verify.service;
 
-import com.fasterxml.jackson.databind.JsonNode;
 import com.project.oditji.verify.dao.VerifyDAO;
 import com.project.oditji.verify.vo.AdultVerifyCompleteVO;
 import com.project.oditji.verify.vo.AdultVerifyReadyVO;
@@ -12,57 +11,93 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestClient;
 import org.springframework.web.util.UriUtils;
+import tools.jackson.databind.JsonNode;
 
 import java.nio.charset.StandardCharsets;
 import java.security.SecureRandom;
+import java.time.Clock;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.Period;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
+import java.util.Locale;
 
 @Service
 public class VerifyServiceImpl implements VerifyService {
 
+    private static final String PORTONE_BASE_URL = "https://api.portone.io";
+
+    private static final String VERIFIED_STATUS = "VERIFIED";
+
+    private static final String FAILED_STATUS = "FAILED";
+
+    private static final String SERVER_ERROR_STATUS = "SERVER_ERROR";
+
+    private static final String ADULT_Y = "Y";
+
+    private static final String ADULT_N = "N";
+
+    private static final String DEFAULT_RETURN_URL = "/";
+
+    private static final DateTimeFormatter VERIFY_ID_FORMATTER = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
+
+    private static final SecureRandom RANDOM = new SecureRandom();
+
     private final VerifyDAO verifyDAO;
     private final RestClient restClient;
+    private final Clock clock;
 
     private final String storeId;
     private final String easyChannelKey;
     private final String smsChannelKey;
-    private final String portoneApiSecret;
-
-    private static final SecureRandom RANDOM = new SecureRandom();
 
     public VerifyServiceImpl(
             VerifyDAO verifyDAO,
-            @Value("${portone.store-id}") String storeId,
-            @Value("${portone.identity1.channel-key}") String easyChannelKey,
-            @Value("${portone.identity2.channel-key}") String smsChannelKey,
-            @Value("${portone.api-secret}") String portoneApiSecret
+            @Value("${portone.store-id}")
+            String storeId,
+            @Value("${portone.identity1.channel-key}")
+            String easyChannelKey,
+            @Value("${portone.identity2.channel-key}")
+            String smsChannelKey,
+            @Value("${portone.api-secret}")
+            String portoneApiSecret
     ) {
         this.verifyDAO = verifyDAO;
         this.storeId = storeId;
         this.easyChannelKey = easyChannelKey;
         this.smsChannelKey = smsChannelKey;
-        this.portoneApiSecret = portoneApiSecret;
-        
-        // RestClient를 빌더 방식으로 안전하게 초기화합니다.
+        this.clock = Clock.systemDefaultZone();
+
         this.restClient = RestClient.builder()
-                .baseUrl("https://api.portone.io")
+                .baseUrl(PORTONE_BASE_URL)
+                .defaultHeader(
+                        HttpHeaders.AUTHORIZATION,
+                        "PortOne " + portoneApiSecret
+                )
                 .build();
     }
 
     /**
-     * 1. 성인인증 준비단계
+     * 성인인증 준비 단계
      */
     @Override
     public AdultVerifyReadyVO prepareVerification(long memberNo) {
-        String verifyId = makeVerifyId(String.valueOf(memberNo));
-        return new AdultVerifyReadyVO(storeId, easyChannelKey, smsChannelKey, verifyId);
+        String verifyId = makeVerifyId(memberNo);
+
+        return new AdultVerifyReadyVO(
+                storeId,
+                easyChannelKey,
+                smsChannelKey,
+                verifyId
+        );
     }
 
     /**
-     * 2. 성인인증 완료단계 (최종 검증 및 회원 권한 업데이트)
+     * 성인인증 완료 단계
+     *
+     * 포트원 서버에서 실제 인증 결과를 조회한 뒤
+     * 성인 여부를 확인하고 회원 정보를 갱신한다.
      */
     @Override
     @Transactional
@@ -72,175 +107,433 @@ public class VerifyServiceImpl implements VerifyService {
             String returnUrl,
             HttpSession session
     ) {
-        // 1) 기본 데이터 및 유효성 검증
-        if (verifyId == null || verifyId.isBlank()) {
-            return AdultVerifyCompleteVO.fail("본인인증 요청 ID가 없습니다.");
-        }
+        String validationMessage =
+                validateVerifyId(verifyId);
 
-        if (!verifyId.matches("^[A-Za-z0-9_-]{1,80}$")) {
-            return AdultVerifyCompleteVO.fail("본인인증 요청 ID 형식이 올바르지 않습니다.");
+        if (validationMessage != null) {
+            return AdultVerifyCompleteVO.fail(
+                    validationMessage
+            );
         }
 
         if (verifyDAO.countVerifyId(verifyId) > 0) {
-            return AdultVerifyCompleteVO.fail("이미 처리된 본인인증 요청입니다.");
+            return AdultVerifyCompleteVO.fail(
+                    "이미 처리된 본인인증 요청입니다."
+            );
         }
 
         try {
-            // 2) 포트원 API 연동 호출 (RestClient 활용)
-            JsonNode response = getIdentityVerification(verifyId);
+            JsonNode response =
+                    getIdentityVerification(verifyId);
 
-            JsonNode identityVerification = response.path("identityVerification");
-            if (identityVerification.isMissingNode() || identityVerification.isNull()) {
-                identityVerification = response;
+            JsonNode identityVerification =
+                    extractIdentityVerification(response);
+
+            String status =
+                    getString(identityVerification, "status");
+
+            if (!VERIFIED_STATUS.equalsIgnoreCase(status)) {
+                String failStatus =
+                        defaultString(status, "UNKNOWN");
+
+                insertFailedLog(
+                        memberNo,
+                        verifyId,
+                        failStatus
+                );
+
+                return AdultVerifyCompleteVO.fail(
+                        "본인인증이 완료되지 않았습니다. 현재 상태: "
+                                + failStatus
+                );
             }
 
-            String status = getText(identityVerification, "status");
+            JsonNode customer =
+                    extractVerifiedCustomer(
+                            identityVerification
+                    );
 
-            // 3) 인증 상태 체크
-            if (!"VERIFIED".equalsIgnoreCase(status)) {
-                IdentityVerifyLogVO failLog = createBaseLog(memberNo, verifyId, status);
-                verifyDAO.insertVerifyLog(failLog);
-                return AdultVerifyCompleteVO.fail("본인인증이 완료되지 않았습니다. 현재 상태: " + status);
+            String name =
+                    getString(customer, "name");
+
+            String birthDate =
+                    extractBirthDate(customer);
+
+            String phoneNumber =
+                    getString(customer, "phoneNumber");
+
+            String gender =
+                    normalizeGender(
+                            getString(customer, "gender")
+                    );
+
+            boolean adult =
+                    isAdult(birthDate);
+
+            String adultYn =
+                    adult ? ADULT_Y : ADULT_N;
+
+            IdentityVerifyLogVO successLog =
+                    createBaseLog(
+                            memberNo,
+                            verifyId,
+                            status
+                    );
+
+            successLog.setVerifyStatus(VERIFIED_STATUS);
+            successLog.setName(name);
+            successLog.setBirthDate(birthDate);
+            successLog.setPhoneNumber(phoneNumber);
+            successLog.setGender(gender);
+            successLog.setAdultYn(adultYn);
+
+            verifyDAO.insertVerifyLog(successLog);
+
+            if (!adult) {
+                return AdultVerifyCompleteVO.fail(
+                        "성인만 이용할 수 있는 콘텐츠입니다."
+                );
             }
 
-            // 4) 고객 정보 데이터 파싱
-            JsonNode customer = identityVerification.path("verifiedCustomer");
-            if (customer.isMissingNode() || customer.isNull()) {
-                customer = identityVerification.path("customer");
-            }
-
-            String name = getText(customer, "name");
-            String birthDate = extractBirthDate(customer);
-            String phoneNumber = getText(customer, "phoneNumber");
-            String gender = normalizeGender(getText(customer, "gender"));
-
-            // 5) 성인 여부 판별 (만 19세 이상)
-            boolean isAdultUser = isAdult(birthDate);
-            String adultYn = isAdultUser ? "Y" : "N";
-
-            // 6) 결과 로그 설정 및 데이터베이스 적재
-            IdentityVerifyLogVO logVO = createBaseLog(memberNo, verifyId, status);
-            logVO.setVerifyStatus("VERIFIED");
-            logVO.setName(name);
-            logVO.setBirthDate(birthDate);
-            logVO.setPhoneNumber(phoneNumber);
-            logVO.setGender(gender);
-            logVO.setAdultYn(adultYn);
-            verifyDAO.insertVerifyLog(logVO);
-
-            // 7) 만약 성인이 아니라면 실패 처리 후 탈출
-            if (!isAdultUser) {
-                return AdultVerifyCompleteVO.fail("성인만 이용할 수 있는 콘텐츠입니다.");
-            }
-
-            // 8) 성인 인증 완료 유저 데이터 갱신 및 세션 기록
             verifyDAO.updateMemberAdultVerified(memberNo);
-            session.setAttribute("ADULT_VERIFIED", "Y");
 
-            return AdultVerifyCompleteVO.success(sanitizeReturnUrl(returnUrl));
+            session.setAttribute(
+                    "ADULT_VERIFIED",
+                    ADULT_Y
+            );
+
+            return AdultVerifyCompleteVO.success(
+                    sanitizeReturnUrl(returnUrl)
+            );
 
         } catch (Exception e) {
-            // 서버 통신 혹은 파싱 에러 밎 오류 처리 로그 기록
-            IdentityVerifyLogVO failLog = createBaseLog(memberNo, verifyId, "SERVER_ERROR");
-            verifyDAO.insertVerifyLog(failLog);
-            return AdultVerifyCompleteVO.fail("성인인증 결과 조회 중 오류가 발생했습니다: " + e.getMessage());
+            insertFailedLog(
+                    memberNo,
+                    verifyId,
+                    SERVER_ERROR_STATUS
+            );
+
+            return AdultVerifyCompleteVO.fail(
+                    "성인인증 결과 조회 중 오류가 발생했습니다."
+            );
         }
     }
 
     /**
-     * 3. 성인인증 이력 조회 여부
+     * 회원의 성인인증 완료 여부 조회
      */
     @Override
     public boolean isAdultVerified(long memberNo) {
-        String adultVerified = verifyDAO.selectMemberAdultVerified(memberNo);
-        return "Y".equals(adultVerified);
+        String adultVerified =
+                verifyDAO.selectMemberAdultVerified(memberNo);
+
+        return ADULT_Y.equals(adultVerified);
     }
 
-    /* ==========================================
-     * 내부 유틸리티 및 헬퍼 메서드
-     * ========================================== */
+    /**
+     * 포트원 본인인증 결과 조회 API 호출
+     */
+    private JsonNode getIdentityVerification(
+            String identityVerificationId
+    ) {
+        String encodedId =
+                UriUtils.encodePathSegment(
+                        identityVerificationId,
+                        StandardCharsets.UTF_8
+                );
 
-    private JsonNode getIdentityVerification(String identityVerificationId) {
-        String encodedId = UriUtils.encodePathSegment(identityVerificationId, StandardCharsets.UTF_8);
-
-        return restClient.get()
-                .uri("/identity-verifications/{identityVerificationId}", encodedId)
-                .header(HttpHeaders.AUTHORIZATION, "PortOne " + portoneApiSecret)
+        JsonNode response = restClient.get()
+                .uri(
+                        "/identity-verifications/{identityVerificationId}",
+                        encodedId
+                )
                 .retrieve()
                 .body(JsonNode.class);
+
+        if (response == null) {
+            throw new IllegalStateException(
+                    "포트원 본인인증 조회 결과가 없습니다."
+            );
+        }
+
+        return response;
     }
 
-    private IdentityVerifyLogVO createBaseLog(Long memberNo, String verifyId, String rawStatus) {
-        IdentityVerifyLogVO log = new IdentityVerifyLogVO();
+    /**
+     * 포트원 응답에서 identityVerification 객체 추출
+     */
+    private JsonNode extractIdentityVerification(
+            JsonNode response
+    ) {
+        JsonNode identityVerification =
+                response.path("identityVerification");
+
+        if (identityVerification.isMissingNode()
+                || identityVerification.isNull()) {
+            return response;
+        }
+
+        return identityVerification;
+    }
+
+    /**
+     * 포트원 응답에서 인증 고객 정보 추출
+     */
+    private JsonNode extractVerifiedCustomer(
+            JsonNode identityVerification
+    ) {
+        JsonNode customer =
+                identityVerification.path(
+                        "verifiedCustomer"
+                );
+
+        if (customer.isMissingNode()
+                || customer.isNull()) {
+            customer =
+                    identityVerification.path(
+                            "customer"
+                    );
+        }
+
+        return customer;
+    }
+
+    /**
+     * 인증 요청 ID 기본 검증
+     */
+    private String validateVerifyId(String verifyId) {
+        if (verifyId == null || verifyId.isBlank()) {
+            return "본인인증 요청 ID가 없습니다.";
+        }
+
+        if (!verifyId.matches(
+                "^[A-Za-z0-9_-]{1,80}$"
+        )) {
+            return "본인인증 요청 ID 형식이 올바르지 않습니다.";
+        }
+
+        return null;
+    }
+
+    /**
+     * 기본 인증 로그 객체 생성
+     */
+    private IdentityVerifyLogVO createBaseLog(
+            long memberNo,
+            String verifyId,
+            String rawStatus
+    ) {
+        IdentityVerifyLogVO log =
+                new IdentityVerifyLogVO();
+
         log.setMemberNo(memberNo);
         log.setVerifyId(verifyId);
         log.setRawStatus(rawStatus);
-        log.setVerifyStatus("FAILED");
-        log.setAdultYn("N");
+        log.setVerifyStatus(FAILED_STATUS);
+        log.setAdultYn(ADULT_N);
+
         return log;
     }
 
+    /**
+     * 실패 인증 로그 저장
+     */
+    private void insertFailedLog(
+            long memberNo,
+            String verifyId,
+            String rawStatus
+    ) {
+        IdentityVerifyLogVO failLog =
+                createBaseLog(
+                        memberNo,
+                        verifyId,
+                        rawStatus
+                );
+
+        verifyDAO.insertVerifyLog(failLog);
+    }
+
+    /**
+     * 만 19세 이상 여부 확인
+     */
     private boolean isAdult(String birthDate) {
-        if (birthDate == null || birthDate.trim().isEmpty()) {
+        if (birthDate == null || birthDate.isBlank()) {
             return false;
         }
+
         try {
-            LocalDate birth = LocalDate.parse(birthDate);
-            return Period.between(birth, LocalDate.now()).getYears() >= 19;
-        } catch (Exception e) {
+            LocalDate birth =
+                    LocalDate.parse(birthDate);
+
+            LocalDate today =
+                    LocalDate.now(clock);
+
+            if (birth.isAfter(today)) {
+                return false;
+            }
+
+            return Period.between(
+                    birth,
+                    today
+            ).getYears() >= 19;
+
+        } catch (DateTimeParseException e) {
             return false;
         }
     }
 
+    /**
+     * 포트원 생년월일 값을 yyyy-MM-dd 형식으로 변환
+     */
     private String extractBirthDate(JsonNode customer) {
-        if (customer == null || customer.isMissingNode() || customer.isNull()) {
+        if (customer == null
+                || customer.isMissingNode()
+                || customer.isNull()) {
             return null;
         }
-        String direct = getText(customer, "birthDate");
-        if (direct != null && direct.matches("\\d{4}-\\d{2}-\\d{2}")) {
-            return direct;
+
+        String birthDate =
+                getString(customer, "birthDate");
+
+        if (birthDate == null || birthDate.isBlank()) {
+            return null;
         }
-        if (direct != null && direct.matches("\\d{8}")) {
-            return direct.substring(0, 4) + "-" + direct.substring(4, 6) + "-" + direct.substring(6, 8);
+
+        String trimmedBirthDate =
+                birthDate.trim();
+
+        if (trimmedBirthDate.matches(
+                "\\d{4}-\\d{2}-\\d{2}"
+        )) {
+            return trimmedBirthDate;
         }
-        return direct;
+
+        if (trimmedBirthDate.matches("\\d{8}")) {
+            return trimmedBirthDate.substring(0, 4)
+                    + "-"
+                    + trimmedBirthDate.substring(4, 6)
+                    + "-"
+                    + trimmedBirthDate.substring(6, 8);
+        }
+
+        return trimmedBirthDate;
     }
 
+    /**
+     * 포트원 성별 값을 프로젝트 형식으로 변환
+     */
     private String normalizeGender(String gender) {
         if (gender == null || gender.isBlank()) {
             return null;
         }
-        String upper = gender.toUpperCase();
-        if ("MALE".equals(upper) || "M".equals(upper)) return "MALE";
-        if ("FEMALE".equals(upper) || "F".equals(upper)) return "FEMALE";
+
+        String normalizedGender =
+                gender.trim()
+                        .toUpperCase(Locale.ROOT);
+
+        if ("MALE".equals(normalizedGender)
+                || "M".equals(normalizedGender)) {
+            return "MALE";
+        }
+
+        if ("FEMALE".equals(normalizedGender)
+                || "F".equals(normalizedGender)) {
+            return "FEMALE";
+        }
+
         return null;
     }
 
-    private String getText(JsonNode node, String fieldName) {
-        if (node == null || node.isMissingNode() || node.isNull()) {
+    /**
+     * Jackson 3 JsonNode에서 문자열 값 추출
+     */
+    private String getString(
+            JsonNode node,
+            String fieldName
+    ) {
+        if (node == null
+                || node.isMissingNode()
+                || node.isNull()) {
             return null;
         }
-        JsonNode value = node.path(fieldName);
-        if (value.isMissingNode() || value.isNull()) {
+
+        JsonNode value =
+                node.path(fieldName);
+
+        if (value.isMissingNode()
+                || value.isNull()) {
             return null;
         }
-        // 원래 코드의 .asString()은 오타 혹은 커스텀 모듈일 확률이 높으므로 
-        // Jackson 표준 문법인 .asText()를 사용하여 안전하게 텍스트를 추출합니다.
-        return value.asText(); 
+
+        String text =
+                value.asString();
+
+        if (text == null || text.isBlank()) {
+            return null;
+        }
+
+        return text;
     }
 
-    private String makeVerifyId(String memberId) {
-        String time = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
-        int randomNumber = RANDOM.nextInt(900000) + 100000;
-        return "oditji" + memberId + time + randomNumber;
+    /**
+     * 포트원 본인인증 요청 ID 생성
+     */
+    private String makeVerifyId(long memberNo) {
+        String time =
+                LocalDateTime.now(clock)
+                        .format(VERIFY_ID_FORMATTER);
+
+        int randomNumber =
+                RANDOM.nextInt(900000) + 100000;
+
+        return "oditji"
+                + memberNo
+                + time
+                + randomNumber;
     }
 
+    /**
+     * 외부 사이트 리다이렉트를 막고 프로젝트 내부 경로만 허용한다.
+     */
     private String sanitizeReturnUrl(String returnUrl) {
-        if (returnUrl == null || returnUrl.isBlank() || 
-            returnUrl.startsWith("http://") || returnUrl.startsWith("https://") || 
-            !returnUrl.startsWith("/")) {
-            return "/";
+        if (returnUrl == null || returnUrl.isBlank()) {
+            return DEFAULT_RETURN_URL;
         }
-        return returnUrl;
+
+        String trimmedUrl =
+                returnUrl.trim();
+
+        if (!trimmedUrl.startsWith("/")) {
+            return DEFAULT_RETURN_URL;
+        }
+
+        if (trimmedUrl.startsWith("//")) {
+            return DEFAULT_RETURN_URL;
+        }
+
+        if (trimmedUrl.startsWith("/\\")) {
+            return DEFAULT_RETURN_URL;
+        }
+
+        if (trimmedUrl.contains("\r")
+                || trimmedUrl.contains("\n")) {
+            return DEFAULT_RETURN_URL;
+        }
+
+        return trimmedUrl;
+    }
+
+    /**
+     * 문자열이 비어 있으면 기본값 반환
+     */
+    private String defaultString(
+            String value,
+            String defaultValue
+    ) {
+        if (value == null || value.isBlank()) {
+            return defaultValue;
+        }
+
+        return value;
     }
 }
